--- a/build.gradle
+++ b/build.gradle
@@ -11,12 +11,8 @@ apply plugin: 'java'
 apply plugin: 'eclipse'
 apply plugin: 'idea'
 apply plugin: 'org.springframework.boot'
-apply plugin: 'war'
 
-
-war {
-    baseName = 'RetailerShop-App'
-    version =  '1.0'
+jar {
     manifest {
         attributes 'Main-Class': 'config.WebApplication'
     }
